[package]
name = "petermaniac-alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
# groupme_bot = "0.1.2"
serde_json = "1.0"
chrono = "0.4"
security-framework = "2.8.2"
futures-executor = "0.3.26"
cooked-waker = "*"
pin-utils = "*"
http = "*"
lazy_static = "1.4.0"
clap = { version = "*", features = ["derive"]}
log = "*"
env_logger = "*"